<resources>
    <string name="app_name">DanmuXposed</string>
    <string name="main_title">弹幕播放器</string>
    <string name="setting_title">弹幕设置</string>
    <string name="path_title">路径设置</string>
    <string name="about_title">关于</string>
    <string name="intro_title">使用说明</string>
    <string name="font_size">字体大小</string>
    <string name="danmuSwitchText">启动监听</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="default_value">1</string>
    <string name="restore_default">恢复默认</string>
    <string name="danmu_speed">弹幕速度</string>
    <string name="shielding_type">屏蔽类型</string>
    <string name="mobile_danmu">滚动弹幕</string>
    <string name="button_danmu">底部弹幕</string>
    <string name="top_danmu">顶部弹幕</string>
    <string name="shielding_danmu">屏蔽弹幕</string>
    <string name="shielding_number">屏蔽数量：</string>
    <string name="add">添加</string>
    <string name="confirmUpdate">确认修改</string>
    <string name="read_file_type">读取方式</string>
    <string name="read_for_file">指定文件</string>
    <string name="read_for_folder">指定文件夹</string>
    <string name="select_file">选择文件</string>
    <string name="select_folder">选择文件夹</string>
    <string name="route">路径</string>
    <string name="change">更换</string>
    <string name="press_to_exit">再按一次退出</string>
    <string name="delete">删除</string>
    <string name="reduce_symbol">-</string>
    <string name="add_symbol">+</string>
    <string name="localNetwork">局域网</string>
    <string name="select">选择</string>
    <string name="donation">捐赠</string>

    <string name="about_use">
        一、使用环境\n
            &#160;&#160;&#160;&#160;Xposed，MxPlayer。DanmuXposed模块基于MxPlayer播放器，
            简单来说就是通过MxPlayer播放视频时，此模块可同步播放弹幕。(兼容pro版本)\n\n

        二、使用介绍\n
            ①设置弹幕属性（速度、大小、屏蔽）\n
            ②设置读取弹幕的路径\n
            ③首界面打开监听\n
            ④MxPlayer播放视频，并开启弹幕\n
            ⑤弹幕开启时，长按开关可调节进度\n
            ⑥弹幕管理中可下载弹幕\n\n

        三、权限说明\n
            应用列表：监听弹幕服务是否开启\n
            读写文件：读取弹幕，写入缓存弹幕\n
            发送彩信：网络权限，下载弹幕，smb读取局域网文件时需要\n\n

            注：设置读取弹幕的路径为文件夹时，将读取文件夹内与视频名相同的弹幕文件
    </string>
    <string name="about_model">
            DanmuXposed模块是为了专门播放弹幕而制作的插件\n\n

            去年制作过一个播放视频和弹幕的DanmuPlayer，
            但是在播放视频方面有太多的问题需要解决，感觉是个优化不完的坑，
            正好最近了解了一下Xposed，然后就制作了这个基于MxPlayer的模块。\n\n

            此模块仅供各位弹幕爱好者交流学习使用。如有修改本模块（修改变更，反编译）等信息后所发布的文件与本人无关。\n\n

            开发者：xyoye\n
            联系方式：yeshao1997@outlook.com\n
            GitHub：github.com/xyoye/DanmuXposed\n\n
            当前版本：V1.1\n
            最后编辑时间：2018.5.22\n\n
    </string>
    <string name="about_donation">开发不易，如果你愿意的话，不论多少，感谢支持。</string>
</resources>
