<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="14sp"
            android:text="@string/font_size"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/font_size"/>

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_centerVertical="true"
                android:text="@string/default_value"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30dp"
                android:textSize="16sp"
                android:textColor="@android:color/holo_blue_light"
                android:text="@string/restore_default"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d5d8d8"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="14sp"
            android:text="@string/danmu_speed"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/speed"/>

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_centerVertical="true"
                android:text="@string/default_value"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30dp"
                android:textSize="16sp"
                android:textColor="@android:color/holo_blue_light"
                android:text="@string/restore_default"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d5d8d8"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="14sp"
            android:text="@string/shielding_type"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/mobile_danmu"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/moblie_danmu_unchecked"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textColor="@android:color/white"
                    android:text="@string/mobile_danmu"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/button_danmu"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/botton_danmu_unchecked"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textColor="@android:color/white"
                    android:text="@string/button_danmu"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/top_danmu"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/top_danmu_unchecked"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textColor="@android:color/white"
                    android:text="@string/top_danmu"/>
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d5d8d8"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="14sp"
            android:text="@string/shielding_danmu"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/shielding_number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="85dp"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray"/>

            <Button
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_corner"
                android:textSize="14sp"
                style="@style/Widget.AppCompat.Button"
                android:textColor="@android:color/white"
                android:text="@string/add"/>

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/danmu_setting_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_corner"
        style="@style/Widget.AppCompat.Button"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:text="@string/confirmUpdate"/>

</RelativeLayout>