<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="76dp"
    android:background="@mipmap/bg3">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/textTipColor"
            android:textSize="14sp"
            android:text="@string/read_file_type"/>

       <RadioGroup
           android:id="@+id/read_type_group"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:layout_marginTop="5dp"
           android:gravity="center_vertical"
           android:orientation="horizontal">
           <RadioButton
               android:id="@+id/read_folder_radio"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center_vertical"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="16sp"
               android:textColor="@android:color/white"
               android:text="@string/read_for_folder"/>

           <RadioButton
               android:id="@+id/read_file_radio"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="20dp"
               android:gravity="center_vertical"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="16sp"
               android:textColor="@android:color/white"
               android:text="@string/read_for_file"/>
       </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d5d8d8"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/textTipColor"
            android:textSize="14sp"
            android:text="@string/select_file"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/file_path_tv"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:singleLine="true"
                android:ellipsize="start"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/change_file_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30dp"
                android:textSize="16sp"
                android:textColor="@color/textActionColor"
                android:text="@string/change"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d5d8d8"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/textTipColor"
            android:textSize="14sp"
            android:text="@string/select_folder"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/folder_path_tv"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:singleLine="true"
                android:ellipsize="start"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/change_folder_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30dp"
                android:textSize="16sp"
                android:textColor="@color/textActionColor"
                android:text="@string/change"/>
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/download_danmu"
        android:layout_width="100dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/ll"
        android:background="@drawable/btn_corner_blue"
        android:textSize="14sp"
        style="@style/Widget.AppCompat.Button"
        android:textColor="@android:color/white"
        android:text="下载弹幕"/>

    <Button
        android:id="@+id/path_setting_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_corner_blue"
        style="@style/Widget.AppCompat.Button"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:text="@string/confirmUpdate"/>
</RelativeLayout>